♻️ refactor : AptitudeService 코드 정리
- analyzeHistories(): 불필요한 메소드 제거
- import 최적화
- getFirst(): 메소드 활용

Resolves: #151 #164